[tool.poetry]
name = "analysis-feature"
version = "0.1.0"
description = ""
authors = ["K5 <oujk17@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.8"
scipy = "1.7.1"
matplotlib = "3.4.1"
matlab = "0.1"
pyshark = "0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
