[tool.poetry]
name = "analysis-feature"
version = "0.1.0"
description = ""
authors = ["HamanakaKeigo <k-hamanaka@ist.osaka-u.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "1.6.2"
matlab = "0.1"
matplotlib = "3.4.1"
pyshark = "0.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
